# yaecs

./: CMakeLists.txt  README.md  yaecs.code-workspace
cmake/: Conan.cmake
src/: CMakeLists.txt
src/yaecs/: entity.hpp  yaecs.hpp
src/yaecs/mpl/: mpl.hpp
src/yaecs/yaecs/: component_storage.hpp  ec_engine.hpp  ec_traits.hpp  entity.hpp  signature_storage.hpp
test/: CMakeLists.txt  benchmarks.cpp  catch_main.cpp  tests.cpp
